<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hotel_navigation"
    app:startDestination="@+id/navigation_hotel_home">


    <activity
        android:id="@+id/navigation_hotel_profile"
        android:name="com.tanzim.hotelsafety.hotel_user.profile.Profile_Dashboard"
        android:label="@string/nav_profile"
        tools:layout="@layout/activity_profile__dashboard" />

    <fragment
        android:id="@+id/navigation_hotel_home"
        android:name="com.tanzim.hotelsafety.hotel_user.hotel_home.HotelHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_hotel_home" />



    <fragment
        android:id="@+id/navigation_hotel_guest"
        android:name="com.tanzim.hotelsafety.hotel_user.guest.GuestFragment"
        android:label="@string/nav_guest"
        tools:layout="@layout/fragment_guest" />
</navigation>